// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders correctly 1`] = `
<span
  class="kd-switch kd-switch-size-small"
>
  <div
    class="kd-switch-inner"
  />
</span>
`;

exports[`Switch renders correctly 2`] = `
<span
  class="kd-switch kd-switch-size-large"
>
  <div
    class="kd-switch-inner"
  />
</span>
`;

exports[`Switch renders correctly 3`] = `
<span
  class="kd-switch kd-switch-size-small"
>
  <div
    class="kd-switch-inner"
  />
</span>
`;
